# HEVA

./: CMakeLists.txt  README.md  capture-v4l2.c  face_recognition.cpp  face_recognition.h  heva.cpp  heva.h  heva.ini  vmc_osc_sender.cpp  vmc_osc_sender.h  x11_transparent_window.cpp
BlenderModels/: VRM to Urho3D.blend  VRM-Default-Release.blend
CoreData/RenderPaths/: Simple.xml
Data/Default/Materials/: Girl_Body.xml  Girl_Dress.xml  Table.xml
Data/Default/Models/: ForwardBackward.ani  Girl_Body.txt  LeftRight.ani  UpDown.ani
Data/Default/Scenes/: Scene.xml
Data/Materials/Default/: Girl_Body.xml  Girl_Dress.xml
Data/Models/: Default.txt
